# libfreenect

./: meson.build
fakenect/: fakenect.c
fakenect/fake-libusb/: libusb.h
